@@ -1,4 +1,4 @@
 #maven.buildNumber.plugin properties file
-#Tue Jan 15 14:55:08 CET 2013
+#Sat Jan 19 10:21:32 CET 2013
 buildNumber=4
-buildNumber0=1577
+buildNumber0=1585
