@@ -20,3 +20,7 @@ Extended and generalized regexp cleaner
 Better validation of configurations
 Issue 90 solved
 JDBCEquivalenceClassDatabase added
+Implemented user control over lookup props
+Changed computation of default lookup props
+Added MatchListener.startProcessing() callback
+Added performance profiling to command-line client
